--- a/delta.html
+++ b/delta.html
@@ -2,4 +2,4 @@
 <head>
 <meta charset="utf-8">
 <title>Pure</title>
-<meta http-equiv="Refresh" content="0; url='https://discord.gg/VMt9xptmPX'" />
+<meta http-equiv="Refresh" content="0; url='https://rekonise.com/delta-menu-v2-41d73'" />
